welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: not found: value j
    T(j)=0
      ^golomb:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to 3){
        ^